@@ -1,3 +1,8 @@
+2002-08-31 15:52  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/image.m: Implement clipping of images using the
+	clipping spans.
+
 2002-08-31 14:40  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ARTContext.m, Source/art/ARTGState.h, Source/art/path.m:
